Added Instance entity to Doctrine and foundation to start developing REST API

--- a/server/dutils-server/app/config/routing.yml
+++ b/server/dutils-server/app/config/routing.yml
@@ -1,4 +1,11 @@
 morenware_dutils:
     resource: "@MorenwareDutilsBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /base
+    
+morenware_dutils_rest:
+    type: rest
+    resource: "@MorenwareDutilsBundle/Resources/config/routing-rest.yml"
+    prefix:   /rest
+    
+
 
