--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/config/routing.yml
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-morenware_dutils_homepage:
-    path:     /hello/{name}
+morenware_dutils_base_homepage:
+    path:     /home
     defaults: { _controller: MorenwareDutilsBundle:Default:index }
