The configuration for REST has been cleaned up to use regular controllers with annotations for injecting parameters serialized to Json.
Services are discovered via annotations. Removed code for FOSRestBundle.

Hopefully the hard part of the configuration phase should be over...

--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/config/services.yml
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/config/services.yml
@@ -2,8 +2,8 @@ parameters:
   morenware_dutils.instance.class: Morenware\DutilsBundle\Entity\Instance
   morenware_dutils.instance.service.class: Morenware\DutilsBundle\Service\InstanceService
     
-
 services:
-    morenware_dutils.instance.service:
+   instance.service:
         class: %morenware_dutils.instance.service.class%
         arguments: [@doctrine.orm.entity_manager, %morenware_dutils.instance.class%]
+   
