--- a/server/dutils-server/app/config/config.yml
+++ b/server/dutils-server/app/config/config.yml
@@ -74,27 +74,33 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
     
-fos_rest:
-    disable_csrf_role: ROLE_API
-    view:
-        formats:
-            json: true
-        view_response_listener: 'force'
-    param_fetcher_listener: true
-    body_listener: true
-    format_listener: true
-    
 sensio_framework_extra:
     view:
         annotations: false
 
 jms_di_extra:
+    disable_grep: true
+    locations:
+        all_bundles: false
+        bundles: [MorenwareDutilsBundle]
+        
     automatic_controller_injections:
         properties:
             request: "@request"
             router: "@router"
-
         method_calls:
             setRouter: ["@router"]
+
+# Converts arguments of controllers to Json   
+services:
+    json_converter:
+        class: Morenware\DutilsBundle\Util\JsonParamConverter
+        arguments: [@jms_serializer]
+        tags:
+            - { name: request.param_converter, priority: 10, converter: json_converter }
+            
+# Overrides default naming of properties in classes -> otherwise translates camel case to underscore separated words
+parameters:
+    jms_serializer.serialized_name_annotation_strategy.class: JMS\Serializer\Naming\IdenticalPropertyNamingStrategy
 
         
