--- a/server/dutils-server/src/Acme/DemoBundle/Resources/config/routing.yml
+++ b/server/dutils-server/src/Acme/DemoBundle/Resources/config/routing.yml
@@ -10,3 +10,7 @@ _demo:
     resource: "@AcmeDemoBundle/Controller/DemoController.php"
     type:     annotation
     prefix:   /demo
+    
+_dutils:
+    resource: "@MorenwareDutilsBundle/Controller"
+    type:     annotation
