--- a/server/dutils-server/app/config/config.yml
+++ b/server/dutils-server/app/config/config.yml
@@ -33,10 +33,22 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    bundles:        [MorenwareDutilsBundle]
+    assets:
+        jquery:
+            inputs: 
+                - '@MorenwareDutilsBundle/Resources/public/js/lib/jquery.js'
+        bootstrap_js:
+            inputs:
+                - '@MorenwareDutilsBundle/Resources/public/js/lib/bootstrap.min.js'
+        bootstrap_css:
+            inputs:
+                - '@MorenwareDutilsBundle/Resources/public/css/base/bootstrap.min.css'    
     #java: /usr/bin/java
     filters:
-        cssrewrite: ~
+        # cssrewrite: ~
+        uglifyjs2:
+            bin: /usr/local/bin/uglifyjs
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         #yui_css:
