--- a/server/dutils-server/app/config/config.yml
+++ b/server/dutils-server/app/config/config.yml
@@ -49,6 +49,10 @@ assetic:
         # cssrewrite: ~
         uglifyjs2:
             bin: /usr/local/bin/uglifyjs
+        coffee:
+            bin: /usr/local/bin/coffee
+            node: /usr/bin/node
+            apply_to: "\.coffee$"
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         #yui_css:
