--- a/server/dutils-server/Rakefile
+++ b/server/dutils-server/Rakefile
@@ -8,6 +8,7 @@ require './lib/Runner'
 clientEnvironments = {
   "local" => {
     :baseClientDir => "src/Morenware/DutilsBundle/Resources",
+    :baseWebDir => "web/client",
     :version => ''
   }
 }
@@ -16,9 +17,10 @@ clientEnvironments = {
 task :webpack_watch, :environmentName do |t, args|
   env = clientEnvironments[args.environmentName]
   baseDir = env[:baseClientDir]
+  baseWebDir = env[:baseWebDir]
   puts "== Watching for changes in #{baseDir} =="
   setup = 'PATH=node_modules/.bin:$PATH && export PATH && '
-  run setup + "webpack #{baseDir}/client/app/init.coffee #{baseDir}/public/js/app/init.js -d --watch"
+  run setup + "./restart-if-crashes.sh webpack #{baseDir}/client/app/init.coffee #{baseWebDir}/js/app/init.js -d --watch"
 end
 
 task :lint_coffeescript do
