--- a/server/dutils-server/composer.json
+++ b/server/dutils-server/composer.json
@@ -25,7 +25,8 @@
 		"doctrine/doctrine-migrations-bundle" : "dev-master",
 		"friendsofsymfony/rest-bundle" : "1.3.*",
 		"jms/serializer-bundle" : "dev-master",
-		"jms/di-extra-bundle" : "dev-master"
+		"jms/di-extra-bundle" : "dev-master",
+		"debril/rss-atom-bundle": "~1.3"
 	},
 	"require-dev" : {
 		"sensio/generator-bundle" : "~2.3"
