Added Angular resource service to start mapping to Restful server side. Added endpoints to CRUD feeds.

--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/config/services.yml
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/config/services.yml
@@ -2,6 +2,7 @@ parameters:
   morenware_dutils.instance.class: Morenware\DutilsBundle\Entity\Instance
   morenware_dutils.instance.service.class: Morenware\DutilsBundle\Service\InstanceService
   morenware_dutils.torrentfeed.class: Morenware\DutilsBundle\Entity\Feed
+  morenware_dutils.torrent.class: Morenware\DutilsBundle\Entity\Torrent
   morenware_dutils.torrentfeed.service.class: Morenware\DutilsBundle\Service\TorrentFeedService
     
 services:
