Frontend work. General tidy up and first version of feedsController to create/list feeds in a table and use a form. Use of $resource with the desired result

--- a/server/dutils-server/app/config/security.yml
+++ b/server/dutils-server/app/config/security.yml
@@ -17,6 +17,10 @@ security:
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
+            
+        client:
+            pattern:  ^/client
+            security: false
 
         login:
             pattern:  ^/demo/secured/login$
