--- a/server/dutils-server/app/config/config.yml
+++ b/server/dutils-server/app/config/config.yml
@@ -122,4 +122,11 @@ services:
 parameters:
     jms_serializer.serialized_name_annotation_strategy.class: JMS\Serializer\Naming\IdenticalPropertyNamingStrategy
 
+leezy_pheanstalk:
+    enabled: true
+    pheanstalks:
+      primary:
+        server: localhost
+        default: true
+            
         
