--- a/server/dutils-server/composer.json
+++ b/server/dutils-server/composer.json
@@ -26,7 +26,8 @@
 		"friendsofsymfony/rest-bundle" : "1.3.*",
 		"jms/serializer-bundle" : "dev-master",
 		"jms/di-extra-bundle" : "dev-master",
-		"debril/rss-atom-bundle": "~1.3"
+		"debril/rss-atom-bundle" : "~1.3",
+		"leezy/pheanstalk-bundle": "2.*"
 	},
 	"require-dev" : {
 		"sensio/generator-bundle" : "~2.3"
