--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/config/services.yml
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/config/services.yml
@@ -3,6 +3,8 @@ parameters:
   morenware_dutils.instance.service.class: Morenware\DutilsBundle\Service\InstanceService
   morenware_dutils.torrentfeed.class: Morenware\DutilsBundle\Entity\Feed
   morenware_dutils.torrent.class: Morenware\DutilsBundle\Entity\Torrent
+  morenware_dutils.transmissionsettings.class:  Morenware\DutilsBundle\Entity\TransmissionSettings
+  morenware_dutils.mediacentersettings.class:  Morenware\DutilsBundle\Entity\MediaCenterSettings
   morenware_dutils.torrentfeed.service.class: Morenware\DutilsBundle\Service\TorrentFeedService
     
 services:
