--- a/server/dutils-server/package.json
+++ b/server/dutils-server/package.json
@@ -3,15 +3,7 @@
   "version": "0.1.0",
   "repository": "https://github.com/dfernandezm/download-utils.git",
   "description": "Download Utils",
-
   "devDependencies": {
-    "lodash": "2.4.x",
-    "grunt": "~0.4.1",
-    "grunt-cli": "~0.1.11",
-    "grunt-contrib-less": "~0.8.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-coffee": "~0.7.0",
-
     "webpack": "1.3.x",
     "coffee-loader": "0.6.x",
     "raw-loader": "0.5.x",
@@ -20,9 +12,17 @@
     "less-loader": "0.6.x",
     "file-loader": "0.5.x",
     "uglify-js": "2.4.x",
-
     "coffee-script": "1.6.x",
     "coffeelint": "1.0.x",
-    "less": "1.6.x"
+    "less": "1.6.x",
+    "gulp": "~3.8.10",
+    "gulp-coffee": ">=0.9",
+    "gulp-util": ">=0.9",
+    "gulp-coffeelint": ">=0.4.0",
+    "coffeelint-stylish": ">=0.1.1",
+    "gulp-livereload": ">=3.4.0"
+  },
+  "scripts": {
+    "gulp-dev": "gulp dev"
   }
 }
