To test: Changed workflow separating renaming and fetching subtitles. Also, both processes target specific torrent paths instead of the whole downloads/library. Transmission calls back notifying a url instead of directly calling command.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -25,8 +25,12 @@ security:
         login:
             pattern:  ^/demo/secured/login$
             security: false
+        
+        notify:
+            pattern: ^/api/notify/.*$
+            security: false
 
         secured_area:
-            pattern:    ^/api
+            pattern: ^/api/.*$
             http_basic:
                 realm: "You should have a user name and password"
