--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
 		"jms/serializer-bundle" : "dev-master",
 		"jms/di-extra-bundle" : "dev-master",
 		"debril/rss-atom-bundle" : "~1.3",
-		"leezy/pheanstalk-bundle": "2.*"
+		"leezy/pheanstalk-bundle" : "2.*",
+		"symfony/dom-crawler": "2.6.1",
+		"symfony/css-selector": "2.6.1"
 	},
 	"require-dev" : {
 		"sensio/generator-bundle" : "~2.3"
