--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "description": "Download Utils",
   "devDependencies": {
     "webpack": "1.3.x",
-    "coffee-loader": "0.6.x",
     "raw-loader": "0.5.x",
     "style-loader": "0.6.x",
     "css-loader": "0.6.x",
     "less-loader": "0.6.x",
     "file-loader": "0.5.x",
     "uglify-js": "2.4.x",
-    "coffee-script": "1.6.x",
-    "coffeelint": "1.0.x",
+    "coffee-script": "^1.9.1",
     "less": "1.6.x",
     "gulp": "~3.8.10",
     "gulp-coffee": ">=0.9",
@@ -24,5 +22,8 @@
   },
   "scripts": {
     "gulp-dev": "gulp dev"
+  },
+  "dependencies": {
+    "moment": "~2.10.2"
   }
 }
