Initial login form with in-memory provider. Added big background. Upgraded Symfony2 to 2.6 and some other dependencies

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,5 +7,7 @@ morenware_dutils_rest:
     resource: "@MorenwareDutilsBundle/Resources/config/routing-rest.yml"
     prefix:   /api
     
+logout:
+  path: /logout
 
 
