First working version of deployment in RaspberryPi using Magallanes

--- a/.mage/config/environment/raspberry.yml
+++ b/.mage/config/environment/raspberry.yml
@@ -6,6 +6,8 @@ deployment:
   excludes:
     - app/cache/*
     - web/bundles/*
+    - node_modules
+    - app/logs/*
     - .settings
     - eclipse
 releases:
@@ -17,9 +19,9 @@ hosts:
   - raspbmc
 tasks:
   pre-deploy:
-    - scm/update
     - build-client
   on-deploy:
+    - configure-web-layer: {environ: raspberry, serverName: torrents.morenware.com, documentRoot: "/var/www/dutils/current/web"}
     - init-database
     - symfony2/doctrine-migrate
     - symfony2/cache-warmup
