--- a/.mage/config/environment/raspberry.yml
+++ b/.mage/config/environment/raspberry.yml
@@ -19,6 +19,7 @@ hosts:
   - 192.168.1.42
 tasks:
   pre-deploy:
+    - create-build-properties
     - build-client
   on-deploy:
     - configure-web-layer: {environ: raspberry, serverName: torrents.morenware.com, documentRoot: "/var/www/dutils/current/web"}
