--- a/app/config/dutilsParameters.yml
+++ b/app/config/dutilsParameters.yml
@@ -1,3 +1,3 @@
 parameters:
     search_cache_dir: /tmp/dutils/cache
-    torrents_temp_path: /home/david/scripts/torrent-temp
+    torrents_temp_path: /mediacenter/temp
