--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dutils-server",
   "version": "0.1.0",
   "repository": "https://github.com/dfernandezm/download-utils.git",
-  "description": "Download Utils",
+  "description": "Media Downloader Automator",
   "devDependencies": {
     "webpack": "1.3.x",
     "raw-loader": "0.5.x",
@@ -10,6 +10,7 @@
     "css-loader": "0.6.x",
     "less-loader": "0.6.x",
     "file-loader": "0.5.x",
+    "coffee-loader": "0.6.x",
     "uglify-js": "2.4.x",
     "coffee-script": "^1.9.1",
     "less": "1.6.x",
