--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "coffee-script": "^1.9.1",
     "less": "1.6.x",
     "gulp": "~3.8.10",
+    "coffee-loader": "0.6.x",
     "gulp-coffee": ">=0.9",
     "gulp-util": ">=0.9",
     "gulp-coffeelint": ">=0.4.0",
