--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ web/client/js/init.js.map
 build.properties
 /components/filebot/scripts/
 /.vagrant/
+/deploy/local/.vagrant/
+/deploy/local/*.box
 *.DS_Store
 deploy/local/.vagrant/
 deploy/local/*.box
