--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gulp-util": ">=0.9",
     "gulp-coffeelint": ">=0.4.0",
     "coffeelint-stylish": ">=0.1.1",
-    "gulp-livereload": ">=3.4.0"
+    "gulp-livereload": ">=3.4.0",
+    "json-loader": "0.5.2"
   },
   "scripts": {
     "dev": "gulp dev",
