Initial version of integrated angular filemanager: needs a complete separate endpoint for now.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ web/client/js/init.js.map
 /deploy/dist/
 build.properties
 /components/filebot/scripts/
+/components/filemanager/
 /.vagrant/
 /deploy/local/.vagrant/
 /deploy/local/*.box
@@ -21,3 +22,4 @@ deploy/local/*.box
 /.idea/
 .idea
 *.box
+/bower_components/
