Search websites are now stored in DB. Several tidy ups. Attempt to fix KickassTorrents, but still broken due no changes on classNames to select magnet links.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -94,7 +94,7 @@ parameters:
     jms_serializer.serialized_name_annotation_strategy.class: JMS\Serializer\Naming\IdenticalPropertyNamingStrategy
 
 leezy_pheanstalk:
-    enabled: true
+    enabled: false
     pheanstalks:
       primary:
         server: localhost
