--- a/src/Morenware/DutilsBundle/Resources/config/services.yml
+++ b/src/Morenware/DutilsBundle/Resources/config/services.yml
@@ -7,3 +7,4 @@ parameters:
   morenware_dutils.mediacentersettings.class:  Morenware\DutilsBundle\Entity\MediaCenterSettings
   morenware_dutils.torrentfeed.service.class: Morenware\DutilsBundle\Service\TorrentFeedService
   morenware_dutils.automatedsearchconfig.class:  Morenware\DutilsBundle\Entity\AutomatedSearchConfig
+  morenware_dutils.searchwebsite.class:  Morenware\DutilsBundle\Entity\SearchWebsite
