--- a/.mage/config/environment/osmc.yml
+++ b/.mage/config/environment/osmc.yml
@@ -19,6 +19,7 @@ hosts:
   - 192.168.1.74
 tasks:
   pre-deploy:
+    - checkout-custom-filebot-scripts
     - create-build-properties
     - build-client
   on-deploy:
