--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -5,11 +5,11 @@ framework:
     router:
         resource: "%kernel.root_dir%/config/routing_dev.yml"
         strict_requirements: true
-    profiler: { only_exceptions: false }
+    profiler: { only_exceptions: true }
 
-web_profiler:
-    toolbar: "%debug_toolbar%"
-    intercept_redirects: "%debug_redirects%"
+#web_profiler:
+#    toolbar: "%debug_toolbar%"
+#    intercept_redirects: "%debug_redirects%"
 
 monolog:
     handlers:
