WIP: use torrentElements directive to search. Attempt to get more compact table.

--- a/src/Morenware/DutilsBundle/Resources/client/app/components/torrentList/renderTorrentState/config/cssConfig.json
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/torrentList/renderTorrentState/config/cssConfig.json
@@ -8,5 +8,6 @@
   "DOWNLOAD_COMPLETED" : "label-warning",
   "FAILED_DOWNLOAD_ATTEMPT" : "label-danger",
   "COMPLETED_WITH_ERROR" : "label-danger",
-  "COMPLETED" : "label-success"
+  "COMPLETED" : "label-success",
+  "NEW": "label-success"
 }
