--- a/src/Morenware/DutilsBundle/Resources/client/app/components/torrentList/renderTorrentState/config/stateConfig.json
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/torrentList/renderTorrentState/config/stateConfig.json
@@ -38,5 +38,9 @@
   "COMPLETED" : {
     "cssClass": "label-success",
     "stateText": "COMPLETED"
+  },
+  "NEW" : {
+    "cssClass": "label-success",
+    "stateText": "NEW"
   }
 }
