Several adjustments after deployment

--- a/.mage/config/environment/osmc.yml
+++ b/.mage/config/environment/osmc.yml
@@ -25,14 +25,14 @@ releases:
   symlink: current
   directory: releases
 hosts:
-  - 192.168.1.74
+  - 192.168.1.66
 tasks:
   pre-deploy:
     - checkout-custom-filebot-scripts
     - create-build-properties
     - build-client
   on-deploy:
-    - configure-web-layer: {environ: raspberry, serverName: media-stage.morenware.com, documentRoot: "/var/www/dutils/current/web"}
+    - configure-web-layer: {environ: raspberry, serverName: cosas.morenware.com, documentRoot: "/var/www/dutils/current/web"}
     - create-cron-jobs
     - init-database
     - symfony2/doctrine-migrate
